--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -137,13 +137,15 @@
     .iphone-silhouette {
         width: 80px;
         height: 160px;
-        left: -30px;
+        left: -15px;
+        top: 38%;
     }
-    
+
     .laptop-silhouette {
         width: 180px;
         height: 120px;
-        right: -90px;
+        right: -50px;
+        top: 38%;
     }
     
     /* Ticker Optimization */
